Update to latest OpenJDK version and update Maven wrapper